Migrate to PostgreSQL/Supabase for production deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "prisma generate && prisma migrate deploy && npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": null,
   "outputDirectory": "build/client",
   "serverFiles": ["build/server/**"],
+  "functions": {
+    "build/server/index.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
