Fix vercel.json: remove invalid serverFiles property

--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,8 @@
   "installCommand": "npm install",
   "framework": null,
   "outputDirectory": "build/client",
-  "serverFiles": ["build/server/**"],
   "functions": {
-    "build/server/index.js": {
+    "build/server/**/*.js": {
       "runtime": "nodejs20.x"
     }
   },
