--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "prisma generate && prisma migrate deploy && npm run build",
+  "buildCommand": "npx prisma generate && npx prisma migrate deploy && npm run build",
   "outputDirectory": "build/client",
   "rewrites": [
     {
