Add mandatory GDPR compliance webhooks

--- a/shopify.app.referral-company.toml
+++ b/shopify.app.referral-company.toml
@@ -2,7 +2,7 @@
 
 client_id = "2e491639d4aac4af9be1df4b408fb9ac"
 name = "referral-company"
-application_url = "https://example.com"
+application_url = "https://daisychain-2026.vercel.app"
 embedded = true
 
 [build]
@@ -11,6 +11,31 @@ automatically_update_urls_on_dev = true
 [webhooks]
 api_version = "2026-01"
 
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/scopes_update" ]
+  uri = "/webhooks/app/scopes_update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "orders/create" ]
+  uri = "/webhooks/orders/create"
+
+  # Mandatory compliance webhooks for customer privacy (GDPR)
+  [[webhooks.subscriptions]]
+  topics = [ "customers/redact" ]
+  uri = "/webhooks/customers/redact"
+
+  [[webhooks.subscriptions]]
+  topics = [ "customers/data_request" ]
+  uri = "/webhooks/customers/data_request"
+
+  [[webhooks.subscriptions]]
+  topics = [ "shop/redact" ]
+  uri = "/webhooks/shop/redact"
+
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_app_proxy,read_customers,write_customers,read_discounts,write_discounts,read_orders,write_products"
@@ -18,9 +43,9 @@ optional_scopes = [ ]
 use_legacy_install_flow = false
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = [ "https://daisychain-2026.vercel.app/api/auth/callback" ]
 
 [app_proxy]
-url = "https://example.com/daisychain"
+url = "https://daisychain-2026.vercel.app/daisychain"
 subpath = "daisychain"
 prefix = "apps"
